--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -46,7 +46,7 @@ stages:
       artifact: manifests
 
 - stage: DeployToDev
-  displayName: Deploy to Dev stage
+  displayName: Deploy to Dev 
   dependsOn: Build
   jobs:
   - deployment: DeployToDev
@@ -67,38 +67,6 @@ stages:
 
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster (Dev)
-            inputs:
-              action: deploy
-              manifests: |
-                $(Pipeline.Workspace)/manifests/deployment.yml
-                $(Pipeline.Workspace)/manifests/service.yml
-              imagePullSecrets: |
-                $(imagePullSecret)
-              containers: |
-                $(containerRegistry)/$(imageRepository):$(tag)
-
-- stage: DeployToStage
-  displayName: Deploy to Stage stage
-  dependsOn: DeployToDev
-  jobs:
-  - deployment: DeployToStage
-    displayName: Deploy to Stage
-    pool:
-      vmImage: $(vmImageName)
-    environment: 'stage'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - task: KubernetesManifest@0
-            displayName: Create imagePullSecret
-            inputs:
-              action: createSecret
-              secretName: $(imagePullSecret)
-              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
-
-          - task: KubernetesManifest@0
-            displayName: Deploy to Kubernetes cluster (Stage)
             inputs:
               action: deploy
               manifests: |
